--- a/testtarget/hello_world_test.dSYM/Contents/Resources/Relocations/x86_64/hello_world_test.yml
+++ b/testtarget/hello_world_test.dSYM/Contents/Resources/Relocations/x86_64/hello_world_test.yml
@@ -2,6 +2,7 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     hello_world_test
 relocations:
-  - { offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003EC0, symSize: 0xA9 }
-  - { offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003EC0, symSize: 0xA9 }
+  - { offset: 0x26, size: 0x8, addend: 0x0, symName: _subfunc, symObjAddr: 0x0, symBinAddr: 0x100003EA0, symSize: 0x30 }
+  - { offset: 0x41, size: 0x8, addend: 0x0, symName: _subfunc, symObjAddr: 0x0, symBinAddr: 0x100003EA0, symSize: 0x30 }
+  - { offset: 0x65, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x30, symBinAddr: 0x100003ED0, symSize: 0xA0 }
 ...
